增加垃圾回收相关信息